discussion/kv_engine/149321/149321_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-45044: gcc-10: Move makeStreamsMap to non-member func

When compiling with gcc-10 the following assertion fails in
producer.cc:

	    [  0%] Building CXX object kv_engine/engines/ep/CMakeFiles/ep_objs.dir/src/dcp/producer.cc.o
    In file included from /opt/gcc-10.2.0/include/c++/10.2.0/bits/move.h:57,
		     from /opt/gcc-10.2.0/include/c++/10.2.0/bits/stl_pair.h:59,
		     from /opt/gcc-10.2.0/include/c++/10.2.0/bits/stl_algobase.h:64,
		     from /opt/gcc-10.2.0/include/c++/10.2.0/bits/char_traits.h:39,
		     from /opt/gcc-10.2.0/include/c++/10.2.0/string:40,
		     from /home/ceej/co/cheshire-cat/kv_engine/include/mcbp/protocol/dcp_stream_end_status.h:19,
		     from /home/ceej/co/cheshire-cat/kv_engine/include/memcached/dcp.h:19,
		     from /home/ceej/co/cheshire-cat/kv_engine/engines/ep/src/connhandler.h:23,
		     from /home/ceej/co/cheshire-cat/kv_engine/engines/ep/src/dcp/producer.h:19,
		     from /home/ceej/co/cheshire-cat/kv_engine/engines/ep/src/dcp/producer.cc:18:
    /opt/gcc-10.2.0/include/c++/10.2.0/type_traits: In instantiation of ‘struct std::is_default_constructible<const short unsigned int>’:
    /opt/gcc-10.2.0/include/c++/10.2.0/type_traits:143:12:   required from ‘struct std::__and_<std::is_default_constructible<const short unsigned int>, std::is_default_constructible<std::shared_ptr<StreamContainer<std::shared_ptr<ActiveStream> > > >, std::__not_<std::__and_<std::__is_implicitly_default_constructible<const short unsigned int>, std::__is_implicitly_default_constructible<std::shared_ptr<StreamContainer<std::shared_ptr<ActiveStream> > > > > > >’
    /opt/gcc-10.2.0/include/c++/10.2.0/bits/stl_pair.h:244:59:   required by substitution of ‘template<class _U1, class _U2, typename std::enable_if<std::__and_<std::is_default_constructible<_U1>, std::is_default_constructible<_U2>, std::__not_<std::__and_<std::__is_implicitly_default_constructible<_U1>, std::__is_implicitly_default_constructible<_U2> > > >::value, bool>::type <anonymous> > constexpr std::pair<const short unsigned int, std::shared_ptr<StreamContainer<std::shared_ptr<ActiveStream> > > >::pair() [with _U1 = const short unsigned int; _U2 = std::shared_ptr<StreamContainer<std::shared_ptr<ActiveStream> > >; typename std::enable_if<std::__and_<std::is_default_constructible<_U1>, std::is_default_constructible<_U2>, std::__not_<std::__and_<std::__is_implicitly_default_constructible<_U1>, std::__is_implicitly_default_constructible<_U2> > > >::value, bool>::type <anonymous> = <missing>]’
    /home/ceej/co/cheshire-cat/server_build/tlm/deps/folly.exploded/include/folly/AtomicHashArray-inl.h:63:19:   required from here
    /opt/gcc-10.2.0/include/c++/10.2.0/type_traits:918:52: error: non-constant condition for static assertion
      918 |       static_assert(std::__is_complete_or_unbounded(__type_identity<_Tp>{}),
	  |                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~
    /opt/gcc-10.2.0/include/c++/10.2.0/type_traits:918: confused by earlier errors, bailing out

The issue appears to be GCC 10's stricter checks on having a complete
type when instantiating std::pair, which seems to be necessary for the
return value of makeStreamsMap which is declared in producer.h; where
there's no complete type for ActiveStream.

Fix by moving makeStreamsMap to producer.cc as a non-member function.

Change-Id: I0a4d353334752fcbe075005c542e89fc39236346

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2021-03-23 09:36:50.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-03-23 10:44:57.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34447/ : FAILURE

Timeout of a CTest test 189/405 Test #179: ep-engine_ep_unit_tests.AllBucketTypes/ActiveDurabilityMonitorTest ............................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34447/ )

Compile error at     /opt/gcc-10.2.0/include/c++/10.2.0/type_traits:918:52:
error: non-constant condition for static assertion
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34447/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29567/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7839/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/6381/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8466/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9549/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9403/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9763/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/17316/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-03-23 13:08:03.000000000
Message: 
Patch Set 1: Verified+1

Build Successful 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29567/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7839/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/6381/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8466/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9549/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9403/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9763/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/17316/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34467/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
